crates/etch-core/tests/snapshots/corpus_tests__extensions-inline-directives-quoted-attr-values.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "Use "
          },
          {
            "type": "InlineDirective",
            "name": "name",
            "attrs": {
              "pairs": {
                "active": "true",
                "count": "3",
                "text": "value with spaces"
              }
            }
          },
          {
            "type": "Text",
            "value": " in the contact card."
          }
        ]
      }
    ]
  },
  "errors": []
}
