crates/etch-core/tests/snapshots/corpus_tests__extensions-inline-directives-with-attrs.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "The station ledger shows today's date as "
          },
          {
            "type": "InlineDirective",
            "name": "date",
            "attrs": {
              "pairs": {
                "format": "long"
              }
            }
          },
          {
            "type": "Text",
            "value": "."
          }
        ]
      }
    ]
  },
  "errors": []
}
