crates/etch-core/tests/snapshots/corpus_tests__extensions-inline-directives-with-both.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "I met "
          },
          {
            "type": "InlineDirective",
            "directive_id": 1,
            "span": {
              "start": {
                "line": 1,
                "column": 7
              },
              "end": {
                "line": 1,
                "column": 50
              }
            },
            "name": "character",
            "content": [
              {
                "type": "Text",
                "value": "Sable"
              }
            ],
            "raw_content": "Sable",
            "attrs": {
              "pairs": {
                "mood": "playful",
                "species": "fox"
              }
            }
          },
          {
            "type": "Text",
            "value": " near the winter market."
          }
        ]
      }
    ]
  },
  "errors": []
}
