crates/etch-core/tests/snapshots/corpus_tests__extensions-inline-directives-with-content.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "The guide left a "
          },
          {
            "type": "InlineDirective",
            "directive_id": 1,
            "span": {
              "start": {
                "line": 1,
                "column": 18
              },
              "end": {
                "line": 1,
                "column": 48
              }
            },
            "name": "tooltip",
            "content": [
              {
                "type": "Text",
                "value": "hover over this text"
              }
            ],
            "raw_content": "hover over this text"
          },
          {
            "type": "Text",
            "value": " beside the map legend."
          }
        ]
      }
    ]
  },
  "errors": []
}
