crates/etch-core/tests/snapshots/corpus_tests__extensions-nesting-inline-in-leaf.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "BlockDirective",
        "directive_id": 1,
        "span": {
          "start": {
            "line": 3,
            "column": 1
          },
          "end": {
            "line": 5,
            "column": 3
          }
        },
        "name": "aside",
        "raw_body": "The margin note uses :tooltip[text]{info=\"x\"} beside :math[E=mc^2] in the same paragraph.",
        "body": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "The margin note uses "
              },
              {
                "type": "InlineDirective",
                "directive_id": 2,
                "span": {
                  "start": {
                    "line": 1,
                    "column": 22
                  },
                  "end": {
                    "line": 1,
                    "column": 46
                  }
                },
                "name": "tooltip",
                "content": [
                  {
                    "type": "Text",
                    "value": "text"
                  }
                ],
                "raw_content": "text",
                "attrs": {
                  "pairs": {
                    "info": "x"
                  }
                }
              },
              {
                "type": "Text",
                "value": " beside "
              },
              {
                "type": "InlineDirective",
                "directive_id": 3,
                "span": {
                  "start": {
                    "line": 1,
                    "column": 54
                  },
                  "end": {
                    "line": 1,
                    "column": 67
                  }
                },
                "name": "math",
                "content": [
                  {
                    "type": "Text",
                    "value": "E=mc^2"
                  }
                ],
                "raw_content": "E=mc^2"
              },
              {
                "type": "Text",
                "value": " in the same paragraph."
              }
            ]
          }
        ]
      }
    ]
  },
  "errors": []
}
