crates/etch-core/tests/snapshots/corpus_tests__extensions-nesting-leaf-contains-text.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "BlockDirective",
        "name": "aside",
        "body": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "First paragraph inside the aside."
              }
            ]
          },
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "Second paragraph with "
              },
              {
                "type": "Strong",
                "content": [
                  {
                    "type": "Text",
                    "value": "bold"
                  }
                ]
              },
              {
                "type": "Text",
                "value": " and "
              },
              {
                "type": "Emphasis",
                "content": [
                  {
                    "type": "Text",
                    "value": "italic"
                  }
                ]
              },
              {
                "type": "Text",
                "value": " emphasis."
              }
            ]
          },
          {
            "type": "List",
            "ordered": false,
            "items": [
              {
                "content": [
                  {
                    "type": "Paragraph",
                    "content": [
                      {
                        "type": "Text",
                        "value": "Pack the lantern"
                      }
                    ]
                  }
                ]
              },
              {
                "content": [
                  {
                    "type": "Paragraph",
                    "content": [
                      {
                        "type": "Text",
                        "value": "Check the rope"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  "errors": []
}
