crates/etch-core/tests/snapshots/corpus_tests__extensions-nesting-leaf-rejects-directive.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "BlockDirective",
        "directive_id": 1,
        "span": {
          "start": {
            "line": 3,
            "column": 1
          },
          "end": {
            "line": 9,
            "column": 3
          }
        },
        "name": "aside",
        "raw_body": "This leaf directive starts with valid text.\n\n::spoiler\nThis nested directive should cause a parse error.\n::",
        "body": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "This leaf directive starts with valid text."
              }
            ]
          },
          {
            "type": "BlockDirective",
            "directive_id": 2,
            "span": {
              "start": {
                "line": 6,
                "column": 1
              },
              "end": {
                "line": 8,
                "column": 3
              }
            },
            "name": "spoiler",
            "raw_body": "This nested directive should cause a parse error.",
            "body": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "This nested directive should cause a parse error."
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  "errors": [
    {
      "kind": "Error",
      "message": "cannot nest directive inside ::aside (leaf directive) on line 6",
      "line": 6,
      "column": 1
    }
  ]
}
