crates/etch-core/tests/snapshots/corpus_tests__extensions-nesting-structural-in-structural.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "ContainerDirective",
        "directive_id": 1,
        "span": {
          "start": {
            "line": 3,
            "column": 1
          },
          "end": {
            "line": 7,
            "column": 12
          }
        },
        "name": "chapter",
        "attrs": {
          "pairs": {
            "title": "Winter"
          }
        },
        "raw_body": ":::section{title=\"Harbor\"}\nThe cranes stood still over the frozen dock.\n:::/section",
        "body": [
          {
            "type": "ContainerDirective",
            "directive_id": 2,
            "span": {
              "start": {
                "line": 4,
                "column": 1
              },
              "end": {
                "line": 6,
                "column": 12
              }
            },
            "name": "section",
            "attrs": {
              "pairs": {
                "title": "Harbor"
              }
            },
            "raw_body": "The cranes stood still over the frozen dock.",
            "body": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "The cranes stood still over the frozen dock."
                  }
                ]
              }
            ],
            "named_close": true
          }
        ],
        "named_close": true
      }
    ]
  },
  "errors": []
}
