crates/etch-core/tests/snapshots/corpus_tests__integration-embers-in-the-snow.snap
---
source: crates/etch-core/tests/corpus_tests.rs
assertion_line: 895
expression: result
---
{
  "document": {
    "frontmatter": {
      "raw": "title: \"Embers in the Snow\"\nauthor: \"foxwriter42\"\ndate: 2026-03-20\ntags: [drama, winter, shortform]\nrating: general\n",
      "fields": {
        "author": "foxwriter42",
        "date": "2026-03-20",
        "rating": "general",
        "tags": [
          "drama",
          "winter",
          "shortform"
        ],
        "title": "Embers in the Snow"
      }
    },
    "body": [
      {
        "type": "Heading",
        "level": 1,
        "content": [
          {
            "type": "Text",
            "value": "Embers in the Snow"
          }
        ]
      },
      {
        "type": "BlockDirective",
        "directive_id": 1,
        "span": {
          "start": {
            "line": 13,
            "column": 1
          },
          "end": {
            "line": 15,
            "column": 3
          }
        },
        "name": "aside",
        "raw_body": "For everyone who stayed up too late reading under the covers.",
        "body": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "For everyone who stayed up too late reading under the covers."
              }
            ]
          }
        ]
      },
      {
        "type": "BlockDirective",
        "directive_id": 2,
        "span": {
          "start": {
            "line": 17,
            "column": 1
          },
          "end": {
            "line": 19,
            "column": 3
          }
        },
        "name": "note",
        "label": [
          {
            "type": "Text",
            "value": "Content note"
          }
        ],
        "raw_label": "Content note",
        "attrs": {
          "pairs": {
            "type": "caution"
          }
        },
        "raw_body": "Themes of nostalgia and gentle sadness.",
        "body": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "Themes of nostalgia and gentle sadness."
              }
            ]
          }
        ]
      },
      {
        "type": "BlockDirective",
        "directive_id": 3,
        "span": {
          "start": {
            "line": 21,
            "column": 1
          },
          "end": {
            "line": 22,
            "column": 3
          }
        },
        "name": "toc",
        "raw_body": "",
        "body": []
      },
      {
        "type": "ContainerDirective",
        "directive_id": 4,
        "span": {
          "start": {
            "line": 24,
            "column": 1
          },
          "end": {
            "line": 43,
            "column": 12
          }
        },
        "name": "chapter",
        "attrs": {
          "pairs": {
            "title": "The First Snow"
          }
        },
        "raw_body": "\nThe village woke to silence. Not the silence of sleep,\nbut the silence of snow — heavy, patient, ==absolute==.\n\n::aside\nThe author grew up in a town like this one.\n::\n\nMira stepped onto the porch,\nbreath curling like smoke. She held a letter — creased\nfrom folding and refolding — and read it one last time.\n\n> *\"I'll come back when the embers remember how to burn.\"*\n>\n> — Kael's last letter {.attribution}\n\nShe tucked it into her coat and walked into the white.\n",
        "body": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "The village woke to silence. Not the silence of sleep,"
              },
              {
                "type": "SoftBreak"
              },
              {
                "type": "Text",
                "value": "but the silence of snow — heavy, patient, "
              },
              {
                "type": "Highlight",
                "content": [
                  {
                    "type": "Text",
                    "value": "absolute"
                  }
                ]
              },
              {
                "type": "Text",
                "value": "."
              }
            ]
          },
          {
            "type": "BlockDirective",
            "directive_id": 5,
            "span": {
              "start": {
                "line": 29,
                "column": 1
              },
              "end": {
                "line": 31,
                "column": 3
              }
            },
            "name": "aside",
            "raw_body": "The author grew up in a town like this one.",
            "body": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "The author grew up in a town like this one."
                  }
                ]
              }
            ]
          },
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "Mira stepped onto the porch,"
              },
              {
                "type": "SoftBreak"
              },
              {
                "type": "Text",
                "value": "breath curling like smoke. She held a letter — creased"
              },
              {
                "type": "SoftBreak"
              },
              {
                "type": "Text",
                "value": "from folding and refolding — and read it one last time."
              }
            ]
          },
          {
            "type": "BlockQuote",
            "content": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Emphasis",
                    "content": [
                      {
                        "type": "Text",
                        "value": "\"I'll come back when the embers remember how to burn.\""
                      }
                    ]
                  }
                ]
              },
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "— Kael's last letter"
                  }
                ],
                "attrs": {
                  "classes": [
                    "attribution"
                  ]
                }
              }
            ]
          },
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "She tucked it into her coat and walked into the white."
              }
            ]
          }
        ],
        "named_close": true
      },
      {
        "type": "ThematicBreak"
      },
      {
        "type": "ContainerDirective",
        "directive_id": 6,
        "span": {
          "start": {
            "line": 47,
            "column": 1
          },
          "end": {
            "line": 67,
            "column": 12
          }
        },
        "name": "chapter",
        "attrs": {
          "pairs": {
            "title": "The Finding"
          }
        },
        "raw_body": "\nThree days later, she found what she was looking for.[^1]\n\nNot Kael — not exactly. But the place where he'd been,\nmarked by a ring of stones and the ash of a fire\nthat might have been warm ==yesterday==.\n\nThe area measured roughly :math[3\\text{m} \\times 3\\text{m}],\nwith the stones arranged in a precise circle.\n\n::spoiler[What she found inside the ring]\nA small wooden box, half-buried in ash, containing\na photograph and a train ticket dated three years prior.\n::\n\nHer address was simple:\\\n42 Northwind Road\\\nThe Village at the Edge\n",
        "body": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "Three days later, she found what she was looking for."
              },
              {
                "type": "FootnoteReference",
                "label": "1"
              }
            ]
          },
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "Not Kael — not exactly. But the place where he'd been,"
              },
              {
                "type": "SoftBreak"
              },
              {
                "type": "Text",
                "value": "marked by a ring of stones and the ash of a fire"
              },
              {
                "type": "SoftBreak"
              },
              {
                "type": "Text",
                "value": "that might have been warm "
              },
              {
                "type": "Highlight",
                "content": [
                  {
                    "type": "Text",
                    "value": "yesterday"
                  }
                ]
              },
              {
                "type": "Text",
                "value": "."
              }
            ]
          },
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "The area measured roughly "
              },
              {
                "type": "InlineDirective",
                "directive_id": 7,
                "span": {
                  "start": {
                    "line": 1,
                    "column": 27
                  },
                  "end": {
                    "line": 1,
                    "column": 60
                  }
                },
                "name": "math",
                "content": [
                  {
                    "type": "Text",
                    "value": "3\\text{m} \\times 3\\text{m}"
                  }
                ],
                "raw_content": "3\\text{m} \\times 3\\text{m}"
              },
              {
                "type": "Text",
                "value": ","
              },
              {
                "type": "SoftBreak"
              },
              {
                "type": "Text",
                "value": "with the stones arranged in a precise circle."
              }
            ]
          },
          {
            "type": "BlockDirective",
            "directive_id": 8,
            "span": {
              "start": {
                "line": 58,
                "column": 1
              },
              "end": {
                "line": 61,
                "column": 3
              }
            },
            "name": "spoiler",
            "label": [
              {
                "type": "Text",
                "value": "What she found inside the ring"
              }
            ],
            "raw_label": "What she found inside the ring",
            "raw_body": "A small wooden box, half-buried in ash, containing\na photograph and a train ticket dated three years prior.",
            "body": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "A small wooden box, half-buried in ash, containing"
                  },
                  {
                    "type": "SoftBreak"
                  },
                  {
                    "type": "Text",
                    "value": "a photograph and a train ticket dated three years prior."
                  }
                ]
              }
            ]
          },
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "Her address was simple:"
              },
              {
                "type": "HardBreak"
              },
              {
                "type": "Text",
                "value": "42 Northwind Road"
              },
              {
                "type": "HardBreak"
              },
              {
                "type": "Text",
                "value": "The Village at the Edge"
              }
            ]
          }
        ],
        "named_close": true
      },
      {
        "type": "FootnoteDefinition",
        "label": "1",
        "content": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "The finding is loosely based on a Scandinavian"
              },
              {
                "type": "SoftBreak"
              },
              {
                "type": "Text",
                "value": "folktale about returning wolves."
              }
            ]
          }
        ]
      }
    ]
  },
  "errors": []
}
